# AudioTK

./: .appveyor.yml  .gitignore  .gitmodules  .travis.yml  ATK.mm  CMakeLists.txt  Doxyfile  LICENSE  LICENSE.md  README.md  atk-config.cmake.in  atk.natvis  codecov.yml  conanfile.py  sonar-project.properties  update_version.py
ATK/: CMakeLists.txt  config.h.in  git.h.in
ATK/Adaptive/: BlockLMSFilter.cpp  BlockLMSFilter.h  CMakeLists.txt  LMSFilter.cpp  LMSFilter.h  RLSFilter.cpp  RLSFilter.h  config.h
ATK/Core/: Base.cpp  Base.h  BaseFilter.cpp  BaseFilter.h  CMakeLists.txt  ComplexConvertFilter.cpp  ComplexConvertFilter.h  InPointerFilter.cpp  InPointerFilter.h  InPointerFilter.hxx  OutCircularPointerFilter.cpp  OutCircularPointerFilter.h  OutPointerFilter.cpp  OutPointerFilter.h  OutPointerFilter.hxx  PipelineGlobalSinkFilter.cpp  PipelineGlobalSinkFilter.h  ThreadPool.cpp  ThreadPool.h  TypeTraits.h  TypedBaseFilter.cpp  TypedBaseFilter.h  TypedBaseFilter.hxx  Utilities.cpp  Utilities.h  Utilities.hxx  config.h
ATK/Delay/: CMakeLists.txt  DelayInterface.cpp  DelayInterface.h  FeedbackDelayNetworkFilter.h  FeedbackDelayNetworkFilter.hxx  FixedDelayLineFilter.cpp  FixedDelayLineFilter.h  FixedDelayLineFilter.hxx  HadamardFeedbackDelayNetworkFilter.cpp  HadamardFeedbackDelayNetworkFilter.h  HadamardMixture.cpp  HadamardMixture.h  HadamardMixture.hxx  HadamardMixture2.cpp  HouseholderMixture.cpp  HouseholderMixture.h  HouseholderMixture.hxx  HouseholderMixture2.cpp  MultipleUniversalFixedDelayLineFilter.cpp  MultipleUniversalFixedDelayLineFilter.h  StereoUniversalFixedDelayLineFilter.cpp  StereoUniversalFixedDelayLineFilter.h  UniversalFixedDelayLineFilter.cpp  UniversalFixedDelayLineFilter.h  UniversalFixedDelayLineFilter.hxx  UniversalVariableDelayLineFilter.cpp  UniversalVariableDelayLineFilter.h  VariableDelayLineFilter.cpp  VariableDelayLineFilter.h  config.h
ATK/Distortion/: CMakeLists.txt  DiodeClipperFilter.cpp  DiodeClipperFilter.h  HalfTanhShaperFilter.cpp  HalfTanhShaperFilter.h  SD1OverdriveFilter.cpp  SD1OverdriveFilter.h  SVFSD1OverdriveFilter.cpp  SVFSD1OverdriveFilter.h  SimpleOverdriveFilter.cpp  SimpleOverdriveFilter.h  TS9OverdriveFilter.cpp  TS9OverdriveFilter.h  TanhShaperFilter.cpp  TanhShaperFilter.h  WaveshaperFilter.h  config.h
ATK/Dynamic/: ARCompressorFilter.cpp  ARCompressorFilter.h  ApplyGainFilter.cpp  ApplyGainFilter.h  AttackReleaseFilter.cpp  AttackReleaseFilter.h  AttackReleaseHysteresisFilter.cpp  AttackReleaseHysteresisFilter.h  CMakeLists.txt  GainColoredCompressorFilter.cpp  GainColoredCompressorFilter.h  GainColoredExpanderFilter.cpp  GainColoredExpanderFilter.h  GainCompressorFilter.cpp  GainCompressorFilter.h  GainExpanderFilter.cpp  GainExpanderFilter.h  GainFilter.cpp  GainFilter.h  GainFractionalCompressorFilter.cpp  GainFractionalCompressorFilter.h  GainFractionalExpanderFilter.cpp  GainFractionalExpanderFilter.h  GainLimiterFilter.cpp  GainLimiterFilter.h  GainMaxColoredExpanderFilter.cpp  GainMaxColoredExpanderFilter.h  GainMaxCompressorFilter.cpp  GainMaxCompressorFilter.h  GainMaxExpanderFilter.cpp  GainMaxExpanderFilter.h  GainSwellFilter.cpp  GainSwellFilter.h  PowerFilter.cpp  PowerFilter.h  RelativePowerFilter.cpp  RelativePowerFilter.h  config.h
ATK/EQ/: BesselFilter.cpp  BesselFilter.h  BesselFilter.hxx  ButterworthFilter.cpp  ButterworthFilter.h  ButterworthFilter.hxx  CMakeLists.txt  ChamberlinFilter.cpp  ChamberlinFilter.h  Chebyshev1Filter.cpp  Chebyshev1Filter.h  Chebyshev1Filter.hxx  Chebyshev2Filter.cpp  Chebyshev2Filter.h  Chebyshev2Filter.hxx  CustomFIRFilter.cpp  CustomFIRFilter.h  CustomIIRFilter.cpp  CustomIIRFilter.h  EQInterface.cpp  EQInterface.h  FIRFilter.h  FirstOrderFilter.cpp  FirstOrderFilter.h  FourthOrderFilter.cpp  FourthOrderFilter.h  FourthOrderFilter.hxx  IIRFilter.h  LinkwitzRileyFilter.cpp  LinkwitzRileyFilter.h  LinkwitzRileyFilter.hxx  PedalToneStackFilter.cpp  PedalToneStackFilter.h  PedalToneStackFilter.hxx  RIAAFilter.cpp  RIAAFilter.h  RIAAFilter.hxx  RemezBasedFilter.cpp  RemezBasedFilter.h  RobertBristowJohnsonFilter.cpp  (+20 more)
ATK/IO/: CMakeLists.txt  InWavFilter.cpp  InWavFilter.h  OutWavFilter.cpp  OutWavFilter.h  WavStruct.h  config.h
ATK/Mock/: CMakeLists.txt  FFTCheckerFilter.cpp  FFTCheckerFilter.h  SimpleSinusGeneratorFilter.cpp  SimpleSinusGeneratorFilter.h  SinusGeneratorFilter.cpp  SinusGeneratorFilter.h  TriangleCheckerFilter.cpp  TriangleCheckerFilter.h  TriangleGeneratorFilter.cpp  TriangleGeneratorFilter.h  config.h
ATK/Preamplifier/: BasicTubeFunction.h  CMakeLists.txt  DempwolfTriodeFunction.h  EnhancedKorenTriodeFunction.h  FollowerTransistorClassAFilter.cpp  FollowerTransistorClassAFilter.h  KorenTriodeFunction.h  LeachTriodeFunction.h  ModifiedMunroPiazzaTriodeFunction.h  MunroPiazzaTriodeFunction.h  TransistorClassAFilter.cpp  TransistorClassAFilter.h  TransistorFunction.h  Triode2Filter.cpp  Triode2Filter.h  TriodeFilter.cpp  TriodeFilter.h  TubeFilter.cpp  TubeFilter.h  calc_follower_inverse.py  config.h
ATK/Reverberation/: AllPassFilter.cpp  AllPassFilter.h  AllPassReverbFilter.cpp  AllPassReverbFilter.h  CMakeLists.txt  LowPassReverbFilter.cpp  LowPassReverbFilter.h  config.h
ATK/Special/: CMakeLists.txt  ConvolutionFilter.cpp  ConvolutionFilter.h  config.h
ATK/Tools/: ApplyGainFilter.cpp  ApplyGainFilter.h  ApplyGainFilter.hxx  BufferFilter.cpp  BufferFilter.h  CMakeLists.txt  CachedCosinusGeneratorFilter.cpp  CachedCosinusGeneratorFilter.h  CachedSinusGeneratorFilter.cpp  CachedSinusGeneratorFilter.h  DecimationFilter.cpp  DecimationFilter.h  DecimationFilter.hxx  DerivativeFilter.cpp  DerivativeFilter.h  DryWetFilter.cpp  DryWetFilter.h  DryWetFilter.hxx  FFT.cpp  FFT.h  MSFilter.cpp  MSFilter.h  MSFilter.hxx  MaxFilter.cpp  MaxFilter.h  MaxFilter.hxx  MuteSoloBufferFilter.cpp  MuteSoloBufferFilter.h  OffsetVolumeFilter.cpp  OffsetVolumeFilter.h  OffsetVolumeFilter.hxx  OneMinusFilter.cpp  OneMinusFilter.h  OneMinusFilter.hxx  OversamplingFilter.cpp  OversamplingFilter.h  OversamplingFilter.hxx  (+20 more)
Python/: CMakeLists.txt
tests/: CMakeLists.txt
(+631 files in other folders)
