
FILE(GLOB_RECURSE
    ATK_ADAPTIVE_SRC
    *.cpp
)

FILE(GLOB_RECURSE
    ATK_ADAPTIVE_HEADERS
    *.h
)

include_directories(${PROJECT_SOURCE_DIR})

if(ENABLE_STATIC_LIBRARIES)
add_library(ATKAdaptive_static
    STATIC
    ${ATK_ADAPTIVE_SRC} ${ATK_ADAPTIVE_HEADERS}
)

INSTALL(TARGETS ATKAdaptive_static
    RUNTIME DESTINATION ${CMAKE_INSTALL_PREFIX}/bin/ COMPONENT libraries
    LIBRARY DESTINATION ${CMAKE_INSTALL_PREFIX}/lib/ COMPONENT libraries
    ARCHIVE DESTINATION ${CMAKE_INSTALL_PREFIX}/lib/ COMPONENT libraries
    )
endif(ENABLE_STATIC_LIBRARIES)

if(ENABLE_SHARED_LIBRARIES)
add_definitions(-DBUILD_ATK_ADAPTIVE)
add_definitions(-DATK_SHARED)

add_library(ATKAdaptive
    SHARED
    ${ATK_ADAPTIVE_SRC} ${ATK_ADAPTIVE_HEADERS}
)

target_link_libraries(ATKAdaptive ATKCore)

INSTALL(TARGETS ATKAdaptive
    RUNTIME DESTINATION ${CMAKE_INSTALL_PREFIX}/bin/ COMPONENT libraries
    LIBRARY DESTINATION ${CMAKE_INSTALL_PREFIX}/lib/ COMPONENT libraries
    ARCHIVE DESTINATION ${CMAKE_INSTALL_PREFIX}/lib/ COMPONENT libraries
    )
endif(ENABLE_SHARED_LIBRARIES)

INSTALL(FILES ${ATK_DYNAMIC_HEADERS}
   DESTINATION ${CMAKE_INSTALL_PREFIX}/include/ATK/Adaptive
    )
