
FILE(GLOB_RECURSE
    ATK_CORE_SRC
    *.cpp
)

FILE(GLOB_RECURSE
    ATK_CORE_HEADERS
    *.h
)

add_definitions(-DBUILD_ATK_CORE)

add_library(ATKCore
    SHARED
    ${ATK_CORE_SRC} ${ATK_CORE_HEADERS}
)

add_library(ATKCore_static
    STATIC
    ${ATK_CORE_SRC} ${ATK_CORE_HEADERS}
)

if(ENABLE_INTERNAL_PROFILING)
target_link_libraries(ATKCore ${Boost_TIMER_LIBRARY} ${Boost_SYSTEM_LIBRARY})
endif(ENABLE_INTERNAL_PROFILING)

INSTALL(TARGETS ATKCore
    RUNTIME DESTINATION ${CMAKE_INSTALL_PREFIX}/bin/ COMPONENT libraries
    LIBRARY DESTINATION ${CMAKE_INSTALL_PREFIX}/lib/ COMPONENT libraries
    ARCHIVE DESTINATION ${CMAKE_INSTALL_PREFIX}/lib/ COMPONENT libraries
    )
