
FILE(GLOB_RECURSE
    ATK_DELAY_SRC
    *.cpp
)

FILE(GLOB_RECURSE
    ATK_DELAY_HEADERS
    *.h
)

SOURCE_GROUP_BY_FOLDER(ATK_DELAY)

include_directories(${PROJECT_SOURCE_DIR})

if(ENABLE_STATIC_LIBRARIES)
add_library(ATKDelay_static
    STATIC
    ${ATK_DELAY_SRC} ${ATK_DELAY_HEADERS}
)

set_target_properties (ATKDelay_static PROPERTIES
    FOLDER C++/static
)

INSTALL(TARGETS ATKDelay_static
    RUNTIME DESTINATION ${CMAKE_INSTALL_PREFIX}/bin/ COMPONENT libraries
    LIBRARY DESTINATION ${CMAKE_INSTALL_PREFIX}/lib/ COMPONENT libraries
    ARCHIVE DESTINATION ${CMAKE_INSTALL_PREFIX}/lib/ COMPONENT libraries
    )
endif(ENABLE_STATIC_LIBRARIES)

if(ENABLE_SHARED_LIBRARIES)
add_definitions(-DBUILD_ATK_DELAY)
add_definitions(-DATK_SHARED)

add_library(ATKDelay
    SHARED
    ${ATK_DELAY_SRC} ${ATK_DELAY_HEADERS}
)

set_target_properties (ATKDelay PROPERTIES
    FOLDER C++/shared
)

target_link_libraries(ATKDelay ATKCore)

stagedebug(ATKDelay)

INSTALL(TARGETS ATKDelay
    RUNTIME DESTINATION ${CMAKE_INSTALL_PREFIX}/bin/ COMPONENT libraries
    LIBRARY DESTINATION ${CMAKE_INSTALL_PREFIX}/lib/ COMPONENT libraries
    ARCHIVE DESTINATION ${CMAKE_INSTALL_PREFIX}/lib/ COMPONENT libraries
    )
endif(ENABLE_SHARED_LIBRARIES)

INSTALL(FILES ${ATK_DELAY_HEADERS}
   DESTINATION ${CMAKE_INSTALL_PREFIX}/include/ATK/Delay
    )
