
FILE(GLOB_RECURSE
    ATK_DISTORTION_SRC
    *.cpp
)

FILE(GLOB_RECURSE
    ATK_DISTORTION_HEADERS
    *.h
)

add_definitions(-DBUILD_ATK_DISTORTION)

include_directories(${PROJECT_SOURCE_DIR})

add_library(ATKDistortion
    SHARED
    ${ATK_DISTORTION_SRC} ${ATK_DISTORTION_HEADERS}
)

target_link_libraries(ATKDistortion ATKCore)

INSTALL(TARGETS ATKDistortion
    RUNTIME DESTINATION ${CMAKE_INSTALL_PREFIX}/bin/ COMPONENT libraries
    LIBRARY DESTINATION ${CMAKE_INSTALL_PREFIX}/lib/ COMPONENT libraries
    ARCHIVE DESTINATION ${CMAKE_INSTALL_PREFIX}/lib/ COMPONENT libraries
    )

add_library(ATKDistortion_static
    STATIC
    ${ATK_DISTORTION_SRC} ${ATK_DISTORTION_HEADERS}
)

INSTALL(TARGETS ATKDistortion_static
    RUNTIME DESTINATION ${CMAKE_INSTALL_PREFIX}/bin/ COMPONENT libraries
    LIBRARY DESTINATION ${CMAKE_INSTALL_PREFIX}/lib/ COMPONENT libraries
    ARCHIVE DESTINATION ${CMAKE_INSTALL_PREFIX}/lib/ COMPONENT libraries
    )

INSTALL(FILES ${ATK_DISTORTION_HEADERS}
   DESTINATION ${CMAKE_INSTALL_PREFIX}/include/ATK/Distortion
    )
