
FILE(GLOB_RECURSE
    ATK_DISTORTION_SRC
    *.cpp
)

FILE(GLOB_RECURSE
    ATK_DISTORTION_HEADERS
    *.h
)

if(ENABLE_STATIC_LIBRARIES)
add_library(ATKDistortion_static
    STATIC
    ${ATK_DISTORTION_SRC} ${ATK_DISTORTION_HEADERS}
)

INSTALL(TARGETS ATKDistortion_static
    RUNTIME DESTINATION ${CMAKE_INSTALL_PREFIX}/bin/ COMPONENT libraries
    LIBRARY DESTINATION ${CMAKE_INSTALL_PREFIX}/lib/ COMPONENT libraries
    ARCHIVE DESTINATION ${CMAKE_INSTALL_PREFIX}/lib/ COMPONENT libraries
    )
endif(ENABLE_STATIC_LIBRARIES)

if(ENABLE_SHARED_LIBRARIES)
add_definitions(-DBUILD_ATK_DISTORTION)
add_definitions(-DATK_SHARED)

include_directories(${PROJECT_SOURCE_DIR})

add_library(ATKDistortion
    SHARED
    ${ATK_DISTORTION_SRC} ${ATK_DISTORTION_HEADERS}
)

target_link_libraries(ATKDistortion ATKCore ATKTools)

INSTALL(TARGETS ATKDistortion
    RUNTIME DESTINATION ${CMAKE_INSTALL_PREFIX}/bin/ COMPONENT libraries
    LIBRARY DESTINATION ${CMAKE_INSTALL_PREFIX}/lib/ COMPONENT libraries
    ARCHIVE DESTINATION ${CMAKE_INSTALL_PREFIX}/lib/ COMPONENT libraries
    )
endif(ENABLE_SHARED_LIBRARIES)

INSTALL(FILES ${ATK_DISTORTION_HEADERS}
   DESTINATION ${CMAKE_INSTALL_PREFIX}/include/ATK/Distortion
    )
