
FILE(GLOB_RECURSE
    ATK_DYNAMIC_SRC
    *.cpp
)

FILE(GLOB_RECURSE
    ATK_DYNAMIC_HEADERS
    *.h
)

include_directories(${PROJECT_SOURCE_DIR})

if(ENABLE_STATIC_LIBRARIES)
add_library(ATKDynamic_static
    STATIC
    ${ATK_DYNAMIC_SRC} ${ATK_DYNAMIC_HEADERS}
)

INSTALL(TARGETS ATKDynamic_static
    RUNTIME DESTINATION ${CMAKE_INSTALL_PREFIX}/bin/ COMPONENT libraries
    LIBRARY DESTINATION ${CMAKE_INSTALL_PREFIX}/lib/ COMPONENT libraries
    ARCHIVE DESTINATION ${CMAKE_INSTALL_PREFIX}/lib/ COMPONENT libraries
    )
endif(ENABLE_STATIC_LIBRARIES)

if(ENABLE_SHARED_LIBRARIES)
add_definitions(-DBUILD_ATK_DYNAMIC)
add_definitions(-DATK_SHARED)

add_library(ATKDynamic
    SHARED
    ${ATK_DYNAMIC_SRC} ${ATK_DYNAMIC_HEADERS}
)

target_link_libraries(ATKDynamic ATKCore)

stagedebug(ATKDynamic)

INSTALL(TARGETS ATKDynamic
    RUNTIME DESTINATION ${CMAKE_INSTALL_PREFIX}/bin/ COMPONENT libraries
    LIBRARY DESTINATION ${CMAKE_INSTALL_PREFIX}/lib/ COMPONENT libraries
    ARCHIVE DESTINATION ${CMAKE_INSTALL_PREFIX}/lib/ COMPONENT libraries
    )
endif(ENABLE_SHARED_LIBRARIES)

INSTALL(FILES ${ATK_DYNAMIC_HEADERS}
   DESTINATION ${CMAKE_INSTALL_PREFIX}/include/ATK/Dynamic
    )
