
FILE(GLOB_RECURSE
    ATK_EQ_SRC
    *.cpp
)

FILE(GLOB_RECURSE
    ATK_EQ_HEADERS
    *.h
)

add_definitions(-DBUILD_ATK_EQ)

include_directories(${PROJECT_SOURCE_DIR})

add_library(ATKEQ
    SHARED
    ${ATK_EQ_SRC} ${ATK_EQ_HEADERS}
)

target_link_libraries(ATKEQ ATKTools ATKCore)

INSTALL(TARGETS ATKEQ
    RUNTIME DESTINATION ${CMAKE_INSTALL_PREFIX}/bin/ COMPONENT libraries
    LIBRARY DESTINATION ${CMAKE_INSTALL_PREFIX}/lib/ COMPONENT libraries
    ARCHIVE DESTINATION ${CMAKE_INSTALL_PREFIX}/lib/ COMPONENT libraries
    )

add_library(ATKEQ_static
    STATIC
    ${ATK_EQ_SRC} ${ATK_EQ_HEADERS}
)

INSTALL(TARGETS ATKEQ_static
    RUNTIME DESTINATION ${CMAKE_INSTALL_PREFIX}/bin/ COMPONENT libraries
    LIBRARY DESTINATION ${CMAKE_INSTALL_PREFIX}/lib/ COMPONENT libraries
    ARCHIVE DESTINATION ${CMAKE_INSTALL_PREFIX}/lib/ COMPONENT libraries
    )

INSTALL(FILES ${ATK_EQ_HEADERS}
   DESTINATION ${CMAKE_INSTALL_PREFIX}/include/ATK/EQ
    )
