
FILE(GLOB_RECURSE
    ATK_EQ_SRC
    *.cpp
)

FILE(GLOB_RECURSE
    ATK_EQ_HEADERS
    *.h
)

include_directories(${PROJECT_SOURCE_DIR})

if(ENABLE_STATIC_LIBRARIES)
add_library(ATKEQ_static
    STATIC
    ${ATK_EQ_SRC} ${ATK_EQ_HEADERS}
)

INSTALL(TARGETS ATKEQ_static
    RUNTIME DESTINATION ${CMAKE_INSTALL_PREFIX}/bin/ COMPONENT libraries
    LIBRARY DESTINATION ${CMAKE_INSTALL_PREFIX}/lib/ COMPONENT libraries
    ARCHIVE DESTINATION ${CMAKE_INSTALL_PREFIX}/lib/ COMPONENT libraries
    )
endif(ENABLE_STATIC_LIBRARIES)

if(ENABLE_SHARED_LIBRARIES)
add_definitions(-DBUILD_ATK_EQ)
add_definitions(-DATK_SHARED)

add_library(ATKEQ
    SHARED
    ${ATK_EQ_SRC} ${ATK_EQ_HEADERS}
)

target_link_libraries(ATKEQ ATKTools ATKCore)

INSTALL(TARGETS ATKEQ
    RUNTIME DESTINATION ${CMAKE_INSTALL_PREFIX}/bin/ COMPONENT libraries
    LIBRARY DESTINATION ${CMAKE_INSTALL_PREFIX}/lib/ COMPONENT libraries
    ARCHIVE DESTINATION ${CMAKE_INSTALL_PREFIX}/lib/ COMPONENT libraries
    )
endif(ENABLE_SHARED_LIBRARIES)

stagedebug(ATKEQ)

INSTALL(FILES ${ATK_EQ_HEADERS}
   DESTINATION ${CMAKE_INSTALL_PREFIX}/include/ATK/EQ
    )
